GNOME Bugzilla – Bug 722188
atk_text_get_n_selections() should return 0 when no text is selected
Last modified: 2014-01-14 18:10:18 UTC
Created attachment 266268 [details] accessible-event listener Steps to reproduce: 1. Launch the attached accessible-event listener in a terminal 2. Press Alt+F2 to get into gnome-shell's run dialog 3. Type some text 4. Left arrow to move the caret character by character Expected results: 0 selections would be reported each time Left arrow is pressed because no text is selected. (Compare with a GtkTextView or similar widget.) Actual results: 1 selection is reported each time Left arrow is pressed with the exception of offset 0. Impact: Orca ignores caret-moved events when there is also selected text because when there is a text selection, Orca should present the changes in selection (which it does in response to text-selection-changed signals) instead of the new caret location.
Created attachment 266281 [details] [review] Compute properly if there is text selected selection_bound is relative to cursor_pos, not to 0.
Note: I didn't test this with gnome-shell, but with a clutter example. Note2: in case of accepting this, where should I commit this? On master and clutter-1.18?
*** Bug 677485 has been marked as a duplicate of this bug. ***
Just verified this works/solves the problem. Thanks!!
(In reply to comment #4) > Just verified this works/solves the problem. Thanks!! Ok, so lets push it. (In reply to comment #2) > Note2: in case of accepting this, where should I commit this? On master and > clutter-1.18? From IRC: <ebassi> API: ACK for clutter-1.16 and clutter-1.18 Pushed to both clutter-1.16 and clutter-1.18. Closing bug.